@@ -12,7 +12,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestParam;
@@ -22,7 +21,6 @@ import java.io.IOException;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 /**
@@ -30,8 +28,11 @@ import java.util.stream.StreamSupport;
  */
 @Controller
 public class PlantWikiController {
+
     Logger logger = LoggerFactory.getLogger(PlantWikiController.class);
+
     private final PlantInfoService plantInfoService;
+
     private static final int PLANT_SPECIES_LIMIT = 3000;
 
     @Autowired
@@ -60,7 +61,7 @@ public class PlantWikiController {
                 List<PlantSearchModel> plants = StreamSupport.stream(plantList.get("data").spliterator(), false)
                         .map(PlantSearchModel::new)
                         .filter(plant -> plant.getId() <= PLANT_SPECIES_LIMIT)
-                        .collect(Collectors.toList());
+                        .toList();
 
                 model.addAttribute("plants", plants);
 
@@ -90,6 +91,7 @@ public class PlantWikiController {
                 model.addAttribute("searchError",
                         "An error occurred while retrieving plant data. Please try again later.");
             }
+
         } catch (IOException e) {
             logger.error("IOException occurred while fetching plant data: {}", e.getMessage());
             model.addAttribute("searchError", "There was an error retrieving plant data. Please try again later.");
@@ -113,7 +115,7 @@ public class PlantWikiController {
     private void addDefaultPlantsToModel(Model model) {
         List<PlantSearchModel> plants = plantInfoService.getAllDefaultPlants().stream()
                 .map(PlantSearchModel::new)
-                .collect(Collectors.toList());
+                .toList();
         model.addAttribute("plants", plants);
     }
 
@@ -126,10 +128,9 @@ public class PlantWikiController {
      * @return template for the plant wiki page
      */
     @GetMapping("/plant-wiki")
-    @CrossOrigin
     public String viewPlantWiki(@RequestParam(name = "search", required = false) String search,
             Model model) {
-        logger.info("GET /plant-wiki with search term: {}", search);
+        logger.info("GET /plant-wiki");
 
         if (search != null && !search.isEmpty()) {
             model.addAttribute("searchTerm", search);
